v1.5.0/_sources/lcls-plc-crix-vac_PLC_CRIX_VAC_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 172.21.140.47.1.1
      -
    * - Target IP address
      - 172.21.140.47
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _PLC_CRIX_VAC_pragmas:

Pragmas
-------

Total pragmas found: 169
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, Unset, 2.6.0
        LCLS Vacuum, SLAC - LCLS, Unset, 2.1.0
        LCLSVacuumSerialDriverLib, SLAC - LCLS, Unset, 1.2.2
        PMPS, SLAC - LCLS, Unset, 2.2.1
        SysDir, System, , 3.5.8.0
        SysFile, System, , 3.5.9.0
        Tc2_DataExchange, Beckhoff Automation GmbH, , 3.3.5.0
        Tc2_EtherCAT, Beckhoff Automation GmbH, , 3.3.15.0
        Tc2_IoFunctions, Beckhoff Automation GmbH, , 3.3.13.0
        Tc2_Math, Beckhoff Automation GmbH, , 3.3.1.0
        Tc2_MC2, Beckhoff Automation GmbH, , 3.3.42.0
        Tc2_ModbusSrv, Beckhoff Automation GmbH, , 3.3.2.0
        Tc2_SerialCom, Beckhoff Automation GmbH, Unset, 3.3.7.0
        Tc2_Standard, Beckhoff Automation GmbH, Unset, 3.3.3.0
        Tc2_System, Beckhoff Automation GmbH, Unset, 3.4.24.0
        Tc2_TcpIp, Beckhoff Automation GmbH, , 3.3.6.0
        Tc2_Utilities, Beckhoff Automation GmbH, , 3.3.41.0
        Tc3_EventLogger, Beckhoff Automation GmbH, , 3.1.24.0
        Tc3_Interfaces, Beckhoff Automation GmbH, , 3.4.3.0
        Tc3_JsonXml, Beckhoff Automation GmbH, , 3.3.14.0
        Tc3_Module, Beckhoff Automation GmbH, Unset, 3.3.21.0
        TcUnit, www.tcunit.org, , 1.1.0.0

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4390112 (32)


Constants
^^^^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 637573224 (8)
        Constants.bLittleEndian, BOOL, 637399992 (8)
        Constants.bSimulationMode, BOOL, 637573216 (8)
        Constants.CompilerVersion, VERSION, 644909248 (64)
        Constants.CompilerVersionNumeric, DWORD, 644909312 (32)
        Constants.gc_GaugeValidState, INT, 634574832 (16)
        Constants.gc_iSizeOfGGOArray, INT, 634574816 (16)
        Constants.nPackMode, UINT, 637753120 (16)
        Constants.nRegisterSize, WORD, 637573232 (16)
        Constants.RuntimeVersion, VERSION, 644909184 (64)
        Constants.RuntimeVersionNumeric, DWORD, 639011744 (32)

.. raw:: html

   </details>
   <br />


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096128 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (88)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4389280 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4389408 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4389168 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4389440 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>254 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4181120 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4181024 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4181056 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4180896 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4180992 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4180832 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4181088 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4180864 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4180928 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4180960 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4180704 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4180480 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4180608 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4180672 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4180576 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4180736 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4180768 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4180544 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4180512 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4180640 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4180416 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4180800 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4180384 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4180448 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4181152 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4181184 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4182240 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4182176 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4182272 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4182304 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4182336 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4182368 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4182208 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4180272 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4180208 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4180336 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4180048 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4180320 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4180080 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4180032 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4180160 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4180352 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4180176 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4180192 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4180288 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4180064 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4180256 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4180112 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4180144 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4180224 (16)
        Global_Variables.ADSSTATE_START, UINT, 4180096 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4180128 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4180304 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4180240 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4247936 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4247968 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4246672 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4179744 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4097168 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4179968 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4179984 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4179856 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4179776 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4179840 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4179872 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4179792 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4179808 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4179824 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4179888 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4179904 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4179920 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4179936 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4179952 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4179760 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4180016 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4180000 (16)
        Global_Variables.ASCII_DLE, BYTE, 4389136 (8)
        Global_Variables.ASCII_ETX, BYTE, 4389128 (8)
        Global_Variables.ASCII_NAK, BYTE, 4389144 (8)
        Global_Variables.ASCII_STX, BYTE, 4386904 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4182400 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4180376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4097160 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4096376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4180368 (8)
        Global_Variables.COMERRORADS_INVALID_BAUDRATE, UDINT, 4388032 (32)
        Global_Variables.COMERRORADS_INVALID_CFGSTLEN, UDINT, 4387936 (32)
        Global_Variables.COMERRORADS_INVALID_CFGSTVER, UDINT, 4387968 (32)
        Global_Variables.COMERRORADS_INVALID_CMD, UDINT, 4387872 (32)
        Global_Variables.COMERRORADS_INVALID_COMPORT, UDINT, 4387840 (32)
        Global_Variables.COMERRORADS_INVALID_CTS_OUTCTRL, UDINT, 4388224 (32)
        Global_Variables.COMERRORADS_INVALID_DATABITS, UDINT, 4388096 (32)
        Global_Variables.COMERRORADS_INVALID_DATAPOINTER, UDINT, 4387904 (32)
        Global_Variables.COMERRORADS_INVALID_DSR_OUTCTRL, UDINT, 4388256 (32)
        Global_Variables.COMERRORADS_INVALID_DSR_SENS, UDINT, 4388288 (32)
        Global_Variables.COMERRORADS_INVALID_DTR_CTRL, UDINT, 4388160 (32)
        Global_Variables.COMERRORADS_INVALID_PARITY, UDINT, 4388064 (32)
        Global_Variables.COMERRORADS_INVALID_RTS_CTRL, UDINT, 4388192 (32)
        Global_Variables.COMERRORADS_INVALID_STOPBITS, UDINT, 4388128 (32)
        Global_Variables.COMERRORADS_INVALID_TL, UDINT, 4388000 (32)
        Global_Variables.COMERRORADS_NOT_INIT, UDINT, 4388320 (32)
        Global_Variables.COMERRORADS_PORT_CONNECTED, UDINT, 4388384 (32)
        Global_Variables.COMERRORADS_PORT_NOT_CONNECTED, UDINT, 4388416 (32)
        Global_Variables.COMERRORADS_RD_BUFFER_OVERRUN, UDINT, 4388352 (32)
        Global_Variables.COMERRORADS_RD_FAILURE, UDINT, 4388512 (32)
        Global_Variables.COMERRORADS_RD_THREAD_TIMEOUT, UDINT, 4388448 (32)
        Global_Variables.COMERRORADS_SERVER_INCOMPATIBLE, UDINT, 4388576 (32)
        Global_Variables.COMERRORADS_WR_FAILURE, UDINT, 4388544 (32)
        Global_Variables.COMERRORADS_WR_THREAD_TIMEOUT, UDINT, 4388480 (32)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4260896 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4260928 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4267200 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4267168 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4267136 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4267232 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4183072 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 634596160 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4384400 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4184664 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4384408 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4384416 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 634596096 (64)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4248544 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4386568 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4386272 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4386144 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4246688 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4183056 (16)
        Global_Variables.fbGetCurTaskIdx, GETCURTASKINDEX, 634576032 (128)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4248032 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4248016 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4248048 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4248064 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4248080 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4248384 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4248160 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4248480 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4248256 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4248448 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4248512 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4248096 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4248128 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4248320 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4248224 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4248352 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4248416 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4248288 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4248192 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4182496 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4182560 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4182528 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4182432 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4182592 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4182464 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4248896 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4248640 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4248000 (16)
        Global_Variables.g_DummyVG, ST_VG, 634574976 (1056)
        Global_Variables.g_iSizeOfGGOArray, INT, 634574848 (16)
        Global_Variables.g_stSystem, ST_System, 634574864 (88)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4184672 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4184656 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4184624 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4184640 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4247904 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4246336 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4246368 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4246240 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4246208 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4246176 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4184608 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4246400 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4246528 (16)
        Global_Variables.MAX_RETRIES, INT, 4389152 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4246552 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4246544 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4246664 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4183168 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4246656 (8)
        Global_Variables.nWatchdogTime, BYTE, 4182424 (8)
        Global_Variables.PI, LREAL, 4183104 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4246592 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4246624 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4246560 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4246432 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4181984 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4181344 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4181312 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4246464 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4246496 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4181408 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4181728 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4181696 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4247872 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4181568 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4181376 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4181664 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4181600 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4181440 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4181760 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4181632 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4181504 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4181536 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4181472 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4246272 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4246304 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4181792 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4181216 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4181248 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4181280 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4181856 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4181824 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4181888 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4181952 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4181920 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4182408 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4182416 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4255520 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4255872 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4255456 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4255808 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4255232 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4254384 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4254768 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4255392 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4255744 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4255264 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4255616 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4255328 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4255680 (64)
        Global_Variables.TaskInfo, PlcTaskSystemInfo, 634576192 (1024)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4183040 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4183024 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4182928 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4182864 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4182880 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4182896 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4182848 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4182912 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4182992 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4182944 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4182976 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4183008 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4182960 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 634589120 (6976)
        Global_Variables.TIMEOUT_QVZ, TIME, 4389216 (32)
        Global_Variables.TIMEOUT_WVZ, TIME, 4389248 (32)
        Global_Variables.TIMEOUT_ZVZ, TIME, 4389184 (32)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4182112 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4182016 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4182080 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4182048 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4182144 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4255936 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_Tc2_DataExchange, ST_LibVersion, 634596512 (288)
        Global_Version.stLibVersion_Tc2_EtherCAT, ST_LibVersion, 4178880 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4386976 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 634596224 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 634588832 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4387264 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 4387552 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 4179168 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4179456 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4184320 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4389696 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4390144 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4183712 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 634574528 (288)

.. raw:: html

   </details>
   <br />


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 4389632 (32)


GVL_ADS_Devices
^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_ADS_Devices.IM6K2_GCC_01_reader, FB_TGCC_ADS, 636868224 (93504)
        GVL_ADS_Devices.TM2K2_GCC_01_reader, FB_TGCC_ADS, 636774720 (93504)


GVL_Chamber_Gauges
^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>23 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Chamber_Gauges.CRYO_GCP_01, FB_972, 637312832 (86080)
        GVL_Chamber_Gauges.CRYO_GCP_01.i_iPRESS_R, INT, 637398864 (16)
        GVL_Chamber_Gauges.CRYO_GCP_02, FB_972, 637225664 (86080)
        GVL_Chamber_Gauges.CRYO_GCP_02.i_iPRESS_R, INT, 637311696 (16)
        GVL_Chamber_Gauges.ROUGH_GPI_01, FB_MKS275, 637049152 (86336)
        GVL_Chamber_Gauges.ROUGH_GPI_01.i_iPRESS_R, INT, 637135232 (16)
        GVL_Chamber_Gauges.SDS_GCP_01, FB_972, 637400000 (86080)
        GVL_Chamber_Gauges.SDS_GCP_01.i_iPRESS_R, INT, 637486032 (16)
        GVL_Chamber_Gauges.stCRYO_GCP_01, ST_VG, 637398912 (1056)
        GVL_Chamber_Gauges.stCRYO_GCP_02, ST_VG, 637311744 (1056)
        GVL_Chamber_Gauges.stROUGH_GPI_01, ST_VG, 637135488 (1056)
        GVL_Chamber_Gauges.stTC_GCC_01, ST_VG, 637224576 (1056)
        GVL_Chamber_Gauges.stTC_GCP_01, ST_VG, 637572160 (1056)
        GVL_Chamber_Gauges.stTC_GPI_01, ST_VG, 637048064 (1056)
        GVL_Chamber_Gauges.TC_GCC_01, FB_MKS500, 637136576 (88000)
        GVL_Chamber_Gauges.TC_GCC_01.i_iPRESS_R, INT, 637224176 (16)
        GVL_Chamber_Gauges.TC_GCC_01.i_xDisc_Active, BOOL, 637224208 (8)
        GVL_Chamber_Gauges.TC_GCC_01.i_xHV_ON, BOOL, 637224200 (8)
        GVL_Chamber_Gauges.TC_GCC_01.q_xHV_DIS, BOOL, 637224192 (8)
        GVL_Chamber_Gauges.TC_GCP_01, FB_972, 637486080 (86080)
        GVL_Chamber_Gauges.TC_GCP_01.i_iPRESS_R, INT, 637572112 (16)
        GVL_Chamber_Gauges.TC_GPI_01, FB_MKS275, 636961728 (86336)
        GVL_Chamber_Gauges.TC_GPI_01.i_iPRESS_R, INT, 637047808 (16)

.. raw:: html

   </details>
   <br />


GVL_Chamber_Valves
^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>88 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Chamber_Valves.CRIXS_VENT_VVC_09, FB_VVC, 638962816 (640)
        GVL_Chamber_Valves.CRIXS_VENT_VVC_09.q_xOPN_DO, BOOL, 638963424 (8)
        GVL_Chamber_Valves.CRYO_VGC_01, FB_VRC_DA, 638362688 (85120)
        GVL_Chamber_Valves.CRYO_VGC_01.i_xClsLS, BOOL, 638447784 (8)
        GVL_Chamber_Valves.CRYO_VGC_01.i_xOpnLS, BOOL, 638447776 (8)
        GVL_Chamber_Valves.CRYO_VGC_01.q_xCLS_DO, BOOL, 638447800 (8)
        GVL_Chamber_Valves.CRYO_VGC_01.q_xOPN_DO, BOOL, 638447792 (8)
        GVL_Chamber_Valves.CRYO_VGC_02, FB_VRC_DA, 638447808 (85120)
        GVL_Chamber_Valves.CRYO_VGC_02.i_xClsLS, BOOL, 638532904 (8)
        GVL_Chamber_Valves.CRYO_VGC_02.i_xOpnLS, BOOL, 638532896 (8)
        GVL_Chamber_Valves.CRYO_VGC_02.q_xCLS_DO, BOOL, 638532920 (8)
        GVL_Chamber_Valves.CRYO_VGC_02.q_xOPN_DO, BOOL, 638532912 (8)
        GVL_Chamber_Valves.CRYO_VRC_01, FB_VRC, 638532928 (84544)
        GVL_Chamber_Valves.CRYO_VRC_01.i_xClsLS, BOOL, 638617448 (8)
        GVL_Chamber_Valves.CRYO_VRC_01.i_xOpnLS, BOOL, 638617440 (8)
        GVL_Chamber_Valves.CRYO_VRC_01.q_xOPN_DO, BOOL, 638617456 (8)
        GVL_Chamber_Valves.CRYO_VRC_02, FB_VRC, 638617472 (84544)
        GVL_Chamber_Valves.CRYO_VRC_02.i_xClsLS, BOOL, 638701992 (8)
        GVL_Chamber_Valves.CRYO_VRC_02.i_xOpnLS, BOOL, 638701984 (8)
        GVL_Chamber_Valves.CRYO_VRC_02.q_xOPN_DO, BOOL, 638702000 (8)
        GVL_Chamber_Valves.MAIN_VGC_01, FB_VGC, 638009280 (176704)
        GVL_Chamber_Valves.MAIN_VGC_01.i_xClsLS, BOOL, 638185864 (8)
        GVL_Chamber_Valves.MAIN_VGC_01.i_xOpnLS, BOOL, 638185856 (8)
        GVL_Chamber_Valves.MAIN_VGC_01.q_xOPN_DO, BOOL, 638185872 (8)
        GVL_Chamber_Valves.MAIN_VGC_02, FB_VGC, 638185984 (176704)
        GVL_Chamber_Valves.MAIN_VGC_02.i_xClsLS, BOOL, 638362568 (8)
        GVL_Chamber_Valves.MAIN_VGC_02.i_xOpnLS, BOOL, 638362560 (8)
        GVL_Chamber_Valves.MAIN_VGC_02.q_xOPN_DO, BOOL, 638362576 (8)
        GVL_Chamber_Valves.SDS_VGC_01, FB_VRC_DA, 638702016 (85120)
        GVL_Chamber_Valves.SDS_VGC_01.i_xClsLS, BOOL, 638787112 (8)
        GVL_Chamber_Valves.SDS_VGC_01.i_xOpnLS, BOOL, 638787104 (8)
        GVL_Chamber_Valves.SDS_VGC_01.q_xCLS_DO, BOOL, 638787128 (8)
        GVL_Chamber_Valves.SDS_VGC_01.q_xOPN_DO, BOOL, 638787120 (8)
        GVL_Chamber_Valves.SDS_VRC_01, FB_VRC, 638872512 (84544)
        GVL_Chamber_Valves.SDS_VRC_01.i_xClsLS, BOOL, 638957032 (8)
        GVL_Chamber_Valves.SDS_VRC_01.i_xOpnLS, BOOL, 638957024 (8)
        GVL_Chamber_Valves.SDS_VRC_01.q_xOPN_DO, BOOL, 638957040 (8)
        GVL_Chamber_Valves.SDS_VRC_02, FB_VRC, 638787136 (84544)
        GVL_Chamber_Valves.SDS_VRC_02.i_xClsLS, BOOL, 638871656 (8)
        GVL_Chamber_Valves.SDS_VRC_02.i_xOpnLS, BOOL, 638871648 (8)
        GVL_Chamber_Valves.SDS_VRC_02.q_xOPN_DO, BOOL, 638871664 (8)
        GVL_Chamber_Valves.stCRIXS_VENT_VVC_06, ST_VVC, 638962048 (40)
        GVL_Chamber_Valves.stCRIXS_VENT_VVC_09, ST_VVC, 638963456 (40)
        GVL_Chamber_Valves.stSDS_VRC_01, ST_VRC, 638957056 (816)
        GVL_Chamber_Valves.stSDS_VRC_02, ST_VRC, 638871680 (816)
        GVL_Chamber_Valves.stTC_VRC_01, ST_VGC_2S, 637750080 (3040)
        GVL_Chamber_Valves.stTC_VRC_02, ST_VRC, 637837696 (816)
        GVL_Chamber_Valves.stTC_VRC_03, ST_VRC, 637923072 (816)
        GVL_Chamber_Valves.stVENT_VVC_01, ST_VVC, 638958528 (40)
        GVL_Chamber_Valves.stVENT_VVC_02, ST_VVC, 638959232 (40)
        GVL_Chamber_Valves.stVENT_VVC_03, ST_VVC, 638959936 (40)
        GVL_Chamber_Valves.stVENT_VVC_04, ST_VVC, 638960640 (40)
        GVL_Chamber_Valves.stVENT_VVC_05, ST_VVC, 638961344 (40)
        GVL_Chamber_Valves.stVENT_VVC_07, ST_VVC, 638962752 (40)
        GVL_Chamber_Valves.stVENT_VVC_10, ST_VVC, 638964160 (40)
        GVL_Chamber_Valves.stVLS_VRC_01, ST_VRC, 638008448 (816)
        GVL_Chamber_Valves.TC_VRC_01, FB_VGC_2S, 637573248 (176832)
        GVL_Chamber_Valves.TC_VRC_01.i_xClsLS, BOOL, 637749928 (8)
        GVL_Chamber_Valves.TC_VRC_01.i_xOpnLS, BOOL, 637749920 (8)
        GVL_Chamber_Valves.TC_VRC_01.q_xOPN_DO, BOOL, 637749936 (8)
        GVL_Chamber_Valves.TC_VRC_02, FB_VRC, 637753152 (84544)
        GVL_Chamber_Valves.TC_VRC_02.i_xClsLS, BOOL, 637837672 (8)
        GVL_Chamber_Valves.TC_VRC_02.i_xOpnLS, BOOL, 637837664 (8)
        GVL_Chamber_Valves.TC_VRC_02.q_xOPN_DO, BOOL, 637837680 (8)
        GVL_Chamber_Valves.TC_VRC_03, FB_VRC, 637838528 (84544)
        GVL_Chamber_Valves.TC_VRC_03.i_xClsLS, BOOL, 637923048 (8)
        GVL_Chamber_Valves.TC_VRC_03.i_xOpnLS, BOOL, 637923040 (8)
        GVL_Chamber_Valves.TC_VRC_03.q_xOPN_DO, BOOL, 637923056 (8)
        GVL_Chamber_Valves.VENT_VVC_01, FB_VVC, 638957888 (640)
        GVL_Chamber_Valves.VENT_VVC_01.q_xOPN_DO, BOOL, 638958496 (8)
        GVL_Chamber_Valves.VENT_VVC_02, FB_VVC, 638958592 (640)
        GVL_Chamber_Valves.VENT_VVC_02.q_xOPN_DO, BOOL, 638959200 (8)
        GVL_Chamber_Valves.VENT_VVC_03, FB_VVC, 638959296 (640)
        GVL_Chamber_Valves.VENT_VVC_03.q_xOPN_DO, BOOL, 638959904 (8)
        GVL_Chamber_Valves.VENT_VVC_04, FB_VVC, 638960000 (640)
        GVL_Chamber_Valves.VENT_VVC_04.q_xOPN_DO, BOOL, 638960608 (8)
        GVL_Chamber_Valves.VENT_VVC_05, FB_VVC, 638960704 (640)
        GVL_Chamber_Valves.VENT_VVC_05.q_xOPN_DO, BOOL, 638961312 (8)
        GVL_Chamber_Valves.VENT_VVC_06, FB_VVC, 638961408 (640)
        GVL_Chamber_Valves.VENT_VVC_06.q_xOPN_DO, BOOL, 638962016 (8)
        GVL_Chamber_Valves.VENT_VVC_07, FB_VVC, 638962112 (640)
        GVL_Chamber_Valves.VENT_VVC_07.q_xOPN_DO, BOOL, 638962720 (8)
        GVL_Chamber_Valves.VENT_VVC_10, FB_VVC, 638963520 (640)
        GVL_Chamber_Valves.VENT_VVC_10.q_xOPN_DO, BOOL, 638964128 (8)
        GVL_Chamber_Valves.VLS_VRC_01, FB_VRC, 637923904 (84544)
        GVL_Chamber_Valves.VLS_VRC_01.i_xClsLS, BOOL, 638008424 (8)
        GVL_Chamber_Valves.VLS_VRC_01.i_xOpnLS, BOOL, 638008416 (8)
        GVL_Chamber_Valves.VLS_VRC_01.q_xOPN_DO, BOOL, 638008432 (8)

.. raw:: html

   </details>
   <br />


GVL_COM
^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_COM.K2S17_E5_CH1_fbSerialLineControl, SerialLineControl, 638985088 (10432)
        GVL_COM.K2S17_E5_CH1_SerialRXBuffer, ComBuffer, 638980064 (2512)
        GVL_COM.K2S17_E5_CH1_SerialTXBuffer, ComBuffer, 638982576 (2512)
        GVL_COM.K2S17_E5_CH1_stComIn, EL6inData22B, 638995520 (192)
        GVL_COM.K2S17_E5_CH1_stComOut, EL6outData22B, 638995712 (192)
        GVL_COM.K2S17_E5_CH2_fbSerialLineControl, SerialLineControl, 638969248 (10432)
        GVL_COM.K2S17_E5_CH2_SerialRXBuffer, ComBuffer, 638964208 (2512)
        GVL_COM.K2S17_E5_CH2_SerialTXBuffer, ComBuffer, 638966720 (2512)
        GVL_COM.K2S17_E5_CH2_stComIn, EL6inData22B, 638979680 (192)
        GVL_COM.K2S17_E5_CH2_stComOut, EL6outData22B, 638979872 (192)


GVL_COM_VLS
^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_COM_VLS.VLS_EP1_CH1_fbSerialLineControl, SerialLineControl, 639000928 (10432)
        GVL_COM_VLS.VLS_EP1_CH1_SerialRXBuffer, ComBuffer, 638995904 (2512)
        GVL_COM_VLS.VLS_EP1_CH1_SerialTXBuffer, ComBuffer, 638998416 (2512)
        GVL_COM_VLS.VLS_EP1_CH1_stComIn, EL6inData22B, 639011360 (192)
        GVL_COM_VLS.VLS_EP1_CH1_stComOut, EL6outData22B, 639011552 (192)


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4389984 (128)


GVL_LI3K2
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_LI3K2.RIX_LI3K2_PTM_01, FB_PTM_TwisTorr, 639011776 (82688)
        GVL_LI3K2.RIX_LI3K2_PTM_01.i_xAtSpd, BOOL, 639094440 (8)
        GVL_LI3K2.RIX_LI3K2_PTM_01.i_xFault, BOOL, 639094448 (8)
        GVL_LI3K2.RIX_LI3K2_PTM_01.q_RunDO, BOOL, 639094456 (8)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096088 (8)
        GVL_Logger.cLogHost, STRING(15), 4096192 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097216 (81600)
        GVL_Logger.iLogPort, UINT, 4096096 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4178816 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096416 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096112 (16)
        GVL_Logger.nTrickleThreshold, UDINT, 4178848 (32)
        GVL_Logger.nTrickleTripTime, TIME, 4096448 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096480 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096320 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096512 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097184 (32)

.. raw:: html

   </details>
   <br />


GVL_Mech_Room
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Mech_Room.MECH_GPI_01, FB_MKS275, 639179392 (86336)
        GVL_Mech_Room.MECH_GPI_01.i_iPRESS_R, INT, 639265472 (16)
        GVL_Mech_Room.MECH_PRO_01, FB_EbaraDryPump, 639094464 (83840)
        GVL_Mech_Room.MECH_PRO_01.i_xAlarmOK, BOOL, 639178280 (8)
        GVL_Mech_Room.MECH_PRO_01.i_xBPStatus, BOOL, 639178264 (8)
        GVL_Mech_Room.MECH_PRO_01.i_xMPStatus, BOOL, 639178256 (8)
        GVL_Mech_Room.MECH_PRO_01.i_xRemote, BOOL, 639178288 (8)
        GVL_Mech_Room.MECH_PRO_01.i_xWarning, BOOL, 639178272 (8)
        GVL_Mech_Room.MECH_PRO_01.q_xBPStart, BOOL, 639178248 (8)
        GVL_Mech_Room.MECH_PRO_01.q_xMPStart, BOOL, 639178240 (8)
        GVL_Mech_Room.MECH_VVC_01, FB_VVC, 639178752 (640)
        GVL_Mech_Room.MECH_VVC_01.q_xOPN_DO, BOOL, 639179360 (8)
        GVL_Mech_Room.stMECH_PRO_01, ST_EbaraDryPump, 639178304 (448)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 4392576 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 4390480 (8)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 4390464 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4390448 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4390432 (16)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 4390496 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 4390488 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 4390528 (2048)


GVL_PfeifferParameters
^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PfeifferParameters.gcMaxPfeifferPumps, INT, 634574960 (16)


GVL_PLC_Interfaces
^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>15 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PLC_Interfaces.bCRYO_VGC_01_CLS, BOOL, 637049144 (8)
        GVL_PLC_Interfaces.bCRYO_VGC_01_OPN, BOOL, 637136544 (8)
        GVL_PLC_Interfaces.bCRYO_VGC_02_CLS, BOOL, 637136552 (8)
        GVL_PLC_Interfaces.bCRYO_VGC_02_OPN, BOOL, 637136560 (8)
        GVL_PLC_Interfaces.bSDS_VGC_01_CLS, BOOL, 637136568 (8)
        GVL_PLC_Interfaces.bSDS_VGC_01_OPN, BOOL, 637225632 (8)
        GVL_PLC_Interfaces.xEcatBridge_External_device_not_connected, BOOL, 635810232 (8)
        GVL_PLC_Interfaces.xEcatBridge_TxPDO_state, BOOL, 635810224 (8)
        GVL_PLC_Interfaces.xEcatBridge_WcState, BOOL, 636774688 (8)
        GVL_PLC_Interfaces.xPTC_MOT_Y_10_IN, BOOL, 636774696 (8)
        GVL_PLC_Interfaces.xPTC_MOT_Y_10_OUT, BOOL, 636774704 (8)
        GVL_PLC_Interfaces.xPTC_MOT_Y_11_IN, BOOL, 636774712 (8)
        GVL_PLC_Interfaces.xPTC_MOT_Y_11_OUT, BOOL, 637049120 (8)
        GVL_PLC_Interfaces.xSDS_MOT_Z_18_IN, BOOL, 637049128 (8)
        GVL_PLC_Interfaces.xSDS_MOT_Z_18_OUT, BOOL, 637049136 (8)

.. raw:: html

   </details>
   <br />


GVL_PMPS
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PMPS.fbArbiter1, FB_Arbiter, 640255552 (468032)
        GVL_PMPS.g_FastFaultOutput1, FB_HardwareFFOutput, 639265728 (494912)
        GVL_PMPS.g_FastFaultOutput1.q_xFastFaultOut, BOOL, 639265992 (8)
        GVL_PMPS.g_FastFaultOutput2, FB_HardwareFFOutput, 639760640 (494912)
        GVL_PMPS.g_FastFaultOutput2.q_xFastFaultOut, BOOL, 639760904 (8)


GVL_Pumps
^^^^^^^^^

.. raw:: html

   <details>
       <summary>36 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Pumps.fb_SDS_PTM_01_Pfeiffer_PfeifferCom, FB_PFEIFFER_COM, 641908864 (797696)
        GVL_Pumps.fbTC_PTM_03_PfeifferCom, FB_PFEIFFER_COM, 641000960 (797696)
        GVL_Pumps.SDS_PTM_01, FB_PTM_Pfeiffer, 641798656 (83264)
        GVL_Pumps.SDS_PTM_01.i_xAtSpd, BOOL, 641881856 (8)
        GVL_Pumps.SDS_PTM_01.i_xFaultNC, BOOL, 641881864 (8)
        GVL_Pumps.SDS_PTM_01.i_xRemote, BOOL, 641881880 (8)
        GVL_Pumps.SDS_PTM_01.i_xWarn, BOOL, 641881872 (8)
        GVL_Pumps.SDS_PTM_01.q_PumpingStation, BOOL, 641881896 (8)
        GVL_Pumps.SDS_PTM_01.q_RunDO, BOOL, 641881888 (8)
        GVL_Pumps.SDS_PTM_01.q_xRemote, BOOL, 641881904 (8)
        GVL_Pumps.SDS_PTM_01.q_xReset, BOOL, 641881912 (8)
        GVL_Pumps.stSDS_PTM_01, ST_PfeifferPTM, 641881920 (704)
        GVL_Pumps.stSDS_PTM_01_Pfeiffer_CTRL, ST_PfeifferControl, 641882624 (3200)
        GVL_Pumps.stSDS_PTM_01_Pfeiffer_RBK, ST_PfeifferStatus, 641885824 (23040)
        GVL_Pumps.stTC_PTM_01, ST_LeyboldPTM, 640890240 (512)
        GVL_Pumps.stTC_PTM_02, ST_LeyboldPTM, 640806656 (512)
        GVL_Pumps.stTC_PTM_03, ST_PfeifferPTM, 640974016 (704)
        GVL_Pumps.stTC_PTM_03_Pfeiffer_CTRL, ST_PfeifferControl, 640974720 (3200)
        GVL_Pumps.stTC_PTM_03_Pfeiffer_RBK, ST_PfeifferStatus, 640977920 (23040)
        GVL_Pumps.TC_PTM_01, FB_PTM_TurboDrive, 640807168 (83072)
        GVL_Pumps.TC_PTM_01.i_xAtSpd, BOOL, 640890208 (8)
        GVL_Pumps.TC_PTM_01.i_xFaultNC, BOOL, 640890216 (8)
        GVL_Pumps.TC_PTM_01.q_RunDO, BOOL, 640890224 (8)
        GVL_Pumps.TC_PTM_02, FB_PTM_TurboDrive, 640723584 (83072)
        GVL_Pumps.TC_PTM_02.i_xAtSpd, BOOL, 640806624 (8)
        GVL_Pumps.TC_PTM_02.i_xFaultNC, BOOL, 640806632 (8)
        GVL_Pumps.TC_PTM_02.q_RunDO, BOOL, 640806640 (8)
        GVL_Pumps.TC_PTM_03, FB_PTM_Pfeiffer, 640890752 (83264)
        GVL_Pumps.TC_PTM_03.i_xAtSpd, BOOL, 640973952 (8)
        GVL_Pumps.TC_PTM_03.i_xFaultNC, BOOL, 640973960 (8)
        GVL_Pumps.TC_PTM_03.i_xRemote, BOOL, 640973976 (8)
        GVL_Pumps.TC_PTM_03.i_xWarn, BOOL, 640973968 (8)
        GVL_Pumps.TC_PTM_03.q_PumpingStation, BOOL, 640973992 (8)
        GVL_Pumps.TC_PTM_03.q_RunDO, BOOL, 640973984 (8)
        GVL_Pumps.TC_PTM_03.q_xRemote, BOOL, 640974000 (8)
        GVL_Pumps.TC_PTM_03.q_xReset, BOOL, 640974008 (8)

.. raw:: html

   </details>
   <br />


GVL_Recirculation
^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>27 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Recirculation.RCC_GCP_01, FB_972, 643130816 (86080)
        GVL_Recirculation.RCC_GCP_01.i_iPRESS_R, INT, 643216848 (16)
        GVL_Recirculation.RCC_GCP_02, FB_901_ECAT, 643044736 (86080)
        GVL_Recirculation.RCC_GCP_02.bWcstate, BOOL, 643130784 (8)
        GVL_Recirculation.RCC_GCP_02.i_iPRESS_R, REAL, 643130752 (32)
        GVL_Recirculation.RCC_GCP_02.xOverrange, BOOL, 643130736 (8)
        GVL_Recirculation.RCC_GCP_02.xPress_OK, BOOL, 643130728 (8)
        GVL_Recirculation.RCC_GCP_02.xUnderrange, BOOL, 643130744 (8)
        GVL_Recirculation.RCC_STC_01, FB_ThermoCouple, 643216896 (192)
        GVL_Recirculation.RCC_STC_01.bError, BOOL, 643217032 (8)
        GVL_Recirculation.RCC_STC_01.bOverrange, BOOL, 643217048 (8)
        GVL_Recirculation.RCC_STC_01.bUnderrange, BOOL, 643217040 (8)
        GVL_Recirculation.RCC_STC_01.iRaw, INT, 643217056 (16)
        GVL_Recirculation.RCC_VRC_01, FB_VRC_NC_ClsLS, 642706560 (84544)
        GVL_Recirculation.RCC_VRC_01.i_xClsLS, BOOL, 642791072 (8)
        GVL_Recirculation.RCC_VRC_01.q_xOPN_DO, BOOL, 642791080 (8)
        GVL_Recirculation.RCC_VRC_02, FB_VRC, 642791104 (84544)
        GVL_Recirculation.RCC_VRC_02.i_xClsLS, BOOL, 642875624 (8)
        GVL_Recirculation.RCC_VRC_02.i_xOpnLS, BOOL, 642875616 (8)
        GVL_Recirculation.RCC_VRC_02.q_xOPN_DO, BOOL, 642875632 (8)
        GVL_Recirculation.RCC_VRC_03, FB_VRC_NC_ClsLS, 642875648 (84544)
        GVL_Recirculation.RCC_VRC_03.i_xClsLS, BOOL, 642960160 (8)
        GVL_Recirculation.RCC_VRC_03.q_xOPN_DO, BOOL, 642960168 (8)
        GVL_Recirculation.RCC_VRC_04, FB_VRC_NC_ClsLS, 642960192 (84544)
        GVL_Recirculation.RCC_VRC_04.i_xClsLS, BOOL, 643044704 (8)
        GVL_Recirculation.RCC_VRC_04.q_xOPN_DO, BOOL, 643044712 (8)
        GVL_Recirculation.xSystemOverrideMode_RCC, BOOL, 637225640 (8)

.. raw:: html

   </details>
   <br />


GVL_TcUnit
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 626253664 (8320864)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 4392600 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 626219584 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 626219552 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 626221632 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 626221648 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4392608 (621826944)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 626221664 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4392592 (8)


GVL_Vars
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Vars.iMechDRL_CurrMon, INT, 637312800 (16)
        GVL_Vars.iMechDrl_VMon, INT, 637312816 (16)
        GVL_Vars.xSystemOverride_ChemRIXS, BOOL, 637225648 (8)


GVL_VLS
^^^^^^^

.. raw:: html

   <details>
       <summary>40 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_VLS.fb_VLS_PfeifferCom, FB_PFEIFFER_COM, 643327296 (797696)
        GVL_VLS.SetupMode_VLS, BOOL, 637399968 (8)
        GVL_VLS.st_VLS_Pfeiffer_CTRL, ST_PfeifferControl, 643301056 (3200)
        GVL_VLS.st_VLS_Pfeiffer_RBK, ST_PfeifferStatus, 643304256 (23040)
        GVL_VLS.stVLS_PTM_01, ST_PfeifferPTM, 643300352 (704)
        GVL_VLS.VLS_GCC_01, FB_MKS500, 644734464 (88000)
        GVL_VLS.VLS_GCC_01.i_iPRESS_R, INT, 644822064 (16)
        GVL_VLS.VLS_GCC_01.i_xDisc_Active, BOOL, 644822096 (8)
        GVL_VLS.VLS_GCC_01.i_xHV_ON, BOOL, 644822088 (8)
        GVL_VLS.VLS_GCC_01.q_xHV_DIS, BOOL, 644822080 (8)
        GVL_VLS.VLS_GPI_01, FB_MKS275, 644648128 (86336)
        GVL_VLS.VLS_GPI_01.i_iPRESS_R, INT, 644734208 (16)
        GVL_VLS.VLS_PTM_01, FB_PTM_Pfeiffer, 643217088 (83264)
        GVL_VLS.VLS_PTM_01.i_xAtSpd, BOOL, 643300288 (8)
        GVL_VLS.VLS_PTM_01.i_xFaultNC, BOOL, 643300296 (8)
        GVL_VLS.VLS_PTM_01.i_xRemote, BOOL, 643300312 (8)
        GVL_VLS.VLS_PTM_01.i_xWarn, BOOL, 643300304 (8)
        GVL_VLS.VLS_PTM_01.q_PumpingStation, BOOL, 643300328 (8)
        GVL_VLS.VLS_PTM_01.q_RunDO, BOOL, 643300320 (8)
        GVL_VLS.VLS_PTM_01.q_xRemote, BOOL, 643300336 (8)
        GVL_VLS.VLS_PTM_01.q_xReset, BOOL, 643300344 (8)
        GVL_VLS.VLS_PTM_01_xExtIlkOK, BOOL, 637399976 (8)
        GVL_VLS.VLS_ROUGH_GPI, FB_9XX, 644822464 (86720)
        GVL_VLS.VLS_ROUGH_GPI.i_iPRESS_R, INT, 644909104 (16)
        GVL_VLS.VLS_US_GCC, FB_MKS500, 644560128 (88000)
        GVL_VLS.VLS_US_GCC.i_iPRESS_R, INT, 644647728 (16)
        GVL_VLS.VLS_US_GCC.i_xDisc_Active, BOOL, 644647760 (8)
        GVL_VLS.VLS_US_GCC.i_xHV_ON, BOOL, 644647752 (8)
        GVL_VLS.VLS_US_GCC.q_xHV_DIS, BOOL, 644647744 (8)
        GVL_VLS.VLS_US_GPI, FB_MKS275, 644473792 (86336)
        GVL_VLS.VLS_US_GPI.i_iPRESS_R, INT, 644559872 (16)
        GVL_VLS.VLS_VGC_01, FB_VGC, 644124992 (176704)
        GVL_VLS.VLS_VGC_01.i_xClsLS, BOOL, 644301576 (8)
        GVL_VLS.VLS_VGC_01.i_xOpnLS, BOOL, 644301568 (8)
        GVL_VLS.VLS_VGC_01.q_xOPN_DO, BOOL, 644301584 (8)
        GVL_VLS.VLS_VWC_01, FB_VRC_NO_FFO, 644301696 (172096)
        GVL_VLS.VLS_VWC_01.i_xClsLS, BOOL, 644386216 (8)
        GVL_VLS.VLS_VWC_01.i_xOpnLS, BOOL, 644386208 (8)
        GVL_VLS.VLS_VWC_01.q_xCLS_DO, BOOL, 644386224 (8)
        GVL_VLS.xSystemOverrideMode_VLS, BOOL, 637225656 (8)

.. raw:: html

   </details>
   <br />


LCLS_General
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_General.DefaultGlobals.stSys.I_EcatMaster1, AMSNETID, 4096040 (48)


LCLS_Vacuum
^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_Vacuum.Global_Variables.g_stSystem.I_EcatMaster1, AMSNETID, 634574904 (48)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4389664 (32)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>23 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 634581856 (16)
        PMPS_GVL.cnMaxStateArrayLen, INT, 634585344 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 634583648 (1696)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 634581952 (1696)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 634585376 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 634581632 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 634581760 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 634580608 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 634587488 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 634586464 (1024)
        PMPS_GVL.g_cBoundaries, INT, 634586400 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 634585360 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 634581664 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 634581872 (16)
        PMPS_GVL.PERange, PE_Ranges, 634576160 (32)
        PMPS_GVL.reVHyst, REAL, 634586432 (32)
        PMPS_GVL.stAttenuators, ST_PMPS_Attenuator, 634581888 (64)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 634578912 (1696)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 634577216 (1696)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 634581824 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 634581696 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 634588512 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 634586416 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 634588544 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 634588576 (256)


PRG_ADS_Interfaces
^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_ADS_Interfaces.ads_watch_dog, FB_ADS_WATCHDOG, 634641248 (7008)
        PRG_ADS_Interfaces.i_iWatchdog, UDINT, 634641216 (32)


PRG_Chamber_Pumps
^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_Chamber_Pumps.fbSDS_PTM_01_ILK, FB_ChemRIXS_Turbo_ILK, 635617088 (1504)
        PRG_Chamber_Pumps.fbTC_PTM_01_ILK, FB_ChemRIXS_Turbo_ILK, 635612576 (1504)
        PRG_Chamber_Pumps.fbTC_PTM_02_ILK, FB_ChemRIXS_Turbo_ILK, 635614080 (1504)
        PRG_Chamber_Pumps.fbTC_PTM_03_ILK, FB_ChemRIXS_Turbo_ILK, 635615584 (1504)
        PRG_Chamber_Pumps.SDS_PTM_01_ILK_OK, BOOL, 634649448 (8)
        PRG_Chamber_Pumps.TC_PTM_01_ILK_OK, BOOL, 634648368 (8)
        PRG_Chamber_Pumps.TC_PTM_02_ILK_OK, BOOL, 634648376 (8)
        PRG_Chamber_Pumps.TC_PTM_03_ILK_OK, BOOL, 634649440 (8)


PRG_Chamber_Valves
^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>20 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_Chamber_Valves.bChamberAtVac, BOOL, 634648360 (8)
        PRG_Chamber_Valves.bCRYO_VGC_01_CLS_OK, BOOL, 634648312 (8)
        PRG_Chamber_Valves.bCRYO_VGC_01_OPN_OK, BOOL, 634648320 (8)
        PRG_Chamber_Valves.bCRYO_VGC_02_CLS_OK, BOOL, 634648328 (8)
        PRG_Chamber_Valves.bCRYO_VGC_02_OPN_OK, BOOL, 634648336 (8)
        PRG_Chamber_Valves.bCRYO_VRC_01_ILK, BOOL, 634648344 (8)
        PRG_Chamber_Valves.bCRYO_VRC_02_ILK, BOOL, 634648352 (8)
        PRG_Chamber_Valves.bm_dummy_gauge, ST_VG, 634648384 (1056)
        PRG_Chamber_Valves.bRoughPressOK, BOOL, 626221640 (8)
        PRG_Chamber_Valves.bSDS_VGC_01_CLS_OK, BOOL, 634648280 (8)
        PRG_Chamber_Valves.bSDS_VGC_01_OPN_OK, BOOL, 634648288 (8)
        PRG_Chamber_Valves.bSDS_VRC_01_ILK, BOOL, 634648304 (8)
        PRG_Chamber_Valves.bSDS_VRC_02_ILK, BOOL, 634648296 (8)
        PRG_Chamber_Valves.bTC_VRC_01_ILK, BOOL, 634574952 (8)
        PRG_Chamber_Valves.bTC_VRC_02_ILK, BOOL, 634648256 (8)
        PRG_Chamber_Valves.bTC_VRC_03_ILK, BOOL, 634648264 (8)
        PRG_Chamber_Valves.bVLS_VRC_01_ILK, BOOL, 634648272 (8)
        PRG_Chamber_Valves.dummy_fbArbiter1, FB_Arbiter, 635144384 (468032)
        PRG_Chamber_Valves.dummy_FFFO, FB_HardwareFFOutput, 634649472 (494912)
        PRG_Chamber_Valves.dummy_FFFO.q_xFastFaultOut, BOOL, 634649736 (8)

.. raw:: html

   </details>
   <br />


PRG_MPS
^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_MPS.fb_vetoArbiter, FB_VetoArbiter, 635757440 (27104)
        PRG_MPS.fbArbiterIO, FB_SubSysToArbiter_IO, 635619264 (138176)
        PRG_MPS.fbArbiterIO.i_stCurrentBP, ST_BeamParams_IO, 635620064 (1696)
        PRG_MPS.fbArbiterIO.q_stRequestedBP, ST_BeamParams_IO, 635621760 (1696)
        PRG_MPS.fbArbiterIO.xTxPDO_state, BIT, 635623457 (1)
        PRG_MPS.fbArbiterIO.xTxPDO_toggle, BIT, 635623456 (1)
        PRG_MPS.ff2_ff1_link_vac, FB_FastFault, 635784544 (25088)


PRG_RCC
^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_RCC.RCC_VRC_01_OPEN_OK, BOOL, 634649464 (8)
        PRG_RCC.RCC_VRC_02_OPEN_OK, BOOL, 635618592 (8)
        PRG_RCC.RCC_VRC_03_OPEN_OK, BOOL, 635618600 (8)
        PRG_RCC.RCC_VRC_04_OPEN_OK, BOOL, 635618608 (8)


PRG_VLS_Turbo
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_VLS_Turbo.fbVLS_PTM_01_ILK, FB_ChemRIXS_Turbo_ILK, 636773184 (1504)
        PRG_VLS_Turbo.VLS_PTM_01_xExtIlkOK, BOOL, 635810216 (8)


PRG_VLS_VACUUM
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_VLS_VACUUM.bVLS_Ext_Press, BOOL, 634649456 (8)


PRG_VLS_WINDOW
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_VLS_WINDOW.bExtPress, BOOL, 635619248 (8)
        PRG_VLS_WINDOW.bOverride, BOOL, 635619256 (8)
        PRG_VLS_WINDOW.bSetup, BOOL, 635810208 (8)
        PRG_VLS_WINDOW.fbFSInit, R_TRIG, 635810144 (64)
        PRG_VLS_WINDOW.g_FastFaultOutputNA, FB_HardwareFFOutput, 635810240 (494912)
        PRG_VLS_WINDOW.g_FastFaultOutputNA.q_xFastFaultOut, BOOL, 635810504 (8)
        PRG_VLS_WINDOW.g_fbArbiterNA, FB_Arbiter, 636305152 (468032)
        PRG_VLS_WINDOW.state, E_STATES, 635619232 (16)
        PRG_VLS_WINDOW.xFirstPass, BOOL, 635618616 (8)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 644959648 (960)


TwinCAT_LicenseInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_LicenseInfoVarList._LicenseInfo, PlcLicenseInfo, 644909344 (1024)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__ComTask, _Implicit_Task_Info, 644914592 (704)
        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 644915296 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 644910368 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 644912448 (2048)
        TwinCAT_SystemInfoVarList._TaskOid_ComTask, OTCID, 644914496 (32)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 644914560 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_ComTask, OTCID, 644912416 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 644914528 (32)


