v2.1.0/_sources/lcls-plc-crix-vac_PLC_CRIX_VAC_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 172.21.140.47.1.1
      -
    * - Target IP address
      - 172.21.140.47
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _PLC_CRIX_VAC_pragmas:

Pragmas
-------

Total pragmas found: 140
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, Unset, 2.6.0
        LCLS Vacuum, SLAC - LCLS, Unset, 2.3.0
        LCLSVacuumSerialDriverLib, SLAC - LCLS, Unset, 1.2.2
        PMPS, SLAC - LCLS, Unset, 3.0.14
        SysDir, System, , 3.5.8.0
        SysFile, System, , 3.5.9.0
        Tc2_DataExchange, Beckhoff Automation GmbH, , 3.3.5.0
        Tc2_EtherCAT, Beckhoff Automation GmbH, , 3.3.15.0
        Tc2_IoFunctions, Beckhoff Automation GmbH, , 3.3.13.0
        Tc2_Math, Beckhoff Automation GmbH, , 3.3.1.0
        Tc2_MC2, Beckhoff Automation GmbH, , 3.3.42.0
        Tc2_ModbusSrv, Beckhoff Automation GmbH, , 3.3.2.0
        Tc2_SerialCom, Beckhoff Automation GmbH, Unset, 3.3.7.0
        Tc2_Standard, Beckhoff Automation GmbH, Unset, 3.3.3.0
        Tc2_System, Beckhoff Automation GmbH, Unset, 3.4.24.0
        Tc2_TcpIp, Beckhoff Automation GmbH, , 3.3.6.0
        Tc2_Utilities, Beckhoff Automation GmbH, , 3.3.41.0
        Tc3_EventLogger, Beckhoff Automation GmbH, , 3.1.24.0
        Tc3_Interfaces, Beckhoff Automation GmbH, , 3.4.3.0
        Tc3_JsonXml, Beckhoff Automation GmbH, , 3.3.14.0
        Tc3_Module, Beckhoff Automation GmbH, Unset, 3.3.21.0
        TcUnit, www.tcunit.org, , 1.1.0.0

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4390112 (32)


Constants
^^^^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 1267801248 (8)
        Constants.bLittleEndian, BOOL, 1267626928 (8)
        Constants.bSimulationMode, BOOL, 1267626936 (8)
        Constants.CompilerVersion, VERSION, 1280753280 (64)
        Constants.CompilerVersionNumeric, DWORD, 1268068576 (32)
        Constants.gc_GaugeValidState, INT, 634576704 (16)
        Constants.gc_iSizeOfGGOArray, INT, 626223536 (16)
        Constants.nPackMode, UINT, 1267714096 (16)
        Constants.nRegisterSize, WORD, 1267714080 (16)
        Constants.RuntimeVersion, VERSION, 1280753216 (64)
        Constants.RuntimeVersionNumeric, DWORD, 1267888416 (32)

.. raw:: html

   </details>
   <br />


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096128 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (88)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4389280 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4389408 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4389168 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4389440 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>279 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4181120 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4181024 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4181056 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4180896 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4180992 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4180832 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4181088 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4180864 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4180928 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4180960 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4180704 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4180480 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4180608 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4180672 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4180576 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4180736 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4180768 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4180544 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4180512 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4180640 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4180416 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4180800 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4180384 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4180448 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4181152 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4181184 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4182240 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4182176 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4182272 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4182304 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4182336 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4182368 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4182208 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4180272 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4180208 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4180336 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4180048 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4180320 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4180080 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4180032 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4180160 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4180352 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4180176 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4180192 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4180288 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4180064 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4180256 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4180112 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4180144 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4180224 (16)
        Global_Variables.ADSSTATE_START, UINT, 4180096 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4180128 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4180304 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4180240 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4247936 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4247968 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4246672 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4179744 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4097168 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4179968 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4179984 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4179856 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4179776 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4179840 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4179872 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4179792 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4179808 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4179824 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4179888 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4179904 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4179920 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4179936 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4179952 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4179760 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4180016 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4180000 (16)
        Global_Variables.AMSPORT_TCPIPSRV, UINT, 4390144 (16)
        Global_Variables.ASCII_DLE, BYTE, 4389136 (8)
        Global_Variables.ASCII_ETX, BYTE, 4389128 (8)
        Global_Variables.ASCII_NAK, BYTE, 4389144 (8)
        Global_Variables.ASCII_STX, BYTE, 4386904 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4182400 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4180376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4097160 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4096376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4180368 (8)
        Global_Variables.COMERRORADS_INVALID_BAUDRATE, UDINT, 4388032 (32)
        Global_Variables.COMERRORADS_INVALID_CFGSTLEN, UDINT, 4387936 (32)
        Global_Variables.COMERRORADS_INVALID_CFGSTVER, UDINT, 4387968 (32)
        Global_Variables.COMERRORADS_INVALID_CMD, UDINT, 4387872 (32)
        Global_Variables.COMERRORADS_INVALID_COMPORT, UDINT, 4387840 (32)
        Global_Variables.COMERRORADS_INVALID_CTS_OUTCTRL, UDINT, 4388224 (32)
        Global_Variables.COMERRORADS_INVALID_DATABITS, UDINT, 4388096 (32)
        Global_Variables.COMERRORADS_INVALID_DATAPOINTER, UDINT, 4387904 (32)
        Global_Variables.COMERRORADS_INVALID_DSR_OUTCTRL, UDINT, 4388256 (32)
        Global_Variables.COMERRORADS_INVALID_DSR_SENS, UDINT, 4388288 (32)
        Global_Variables.COMERRORADS_INVALID_DTR_CTRL, UDINT, 4388160 (32)
        Global_Variables.COMERRORADS_INVALID_PARITY, UDINT, 4388064 (32)
        Global_Variables.COMERRORADS_INVALID_RTS_CTRL, UDINT, 4388192 (32)
        Global_Variables.COMERRORADS_INVALID_STOPBITS, UDINT, 4388128 (32)
        Global_Variables.COMERRORADS_INVALID_TL, UDINT, 4388000 (32)
        Global_Variables.COMERRORADS_NOT_INIT, UDINT, 4388320 (32)
        Global_Variables.COMERRORADS_PORT_CONNECTED, UDINT, 4388384 (32)
        Global_Variables.COMERRORADS_PORT_NOT_CONNECTED, UDINT, 4388416 (32)
        Global_Variables.COMERRORADS_RD_BUFFER_OVERRUN, UDINT, 4388352 (32)
        Global_Variables.COMERRORADS_RD_FAILURE, UDINT, 4388512 (32)
        Global_Variables.COMERRORADS_RD_THREAD_TIMEOUT, UDINT, 4388448 (32)
        Global_Variables.COMERRORADS_SERVER_INCOMPATIBLE, UDINT, 4388576 (32)
        Global_Variables.COMERRORADS_WR_FAILURE, UDINT, 4388544 (32)
        Global_Variables.COMERRORADS_WR_THREAD_TIMEOUT, UDINT, 4388480 (32)
        Global_Variables.CONNECT_MODE_ENABLEDBG, DWORD, 4391136 (32)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4260896 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4260928 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4267200 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4267168 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4267136 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4267232 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4183072 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 1264798976 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4384400 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4184664 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4384408 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4384416 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 1264798912 (64)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4248544 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4386568 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4386272 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4386144 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4246688 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4183056 (16)
        Global_Variables.fbGetCurTaskIdx, GETCURTASKINDEX, 634577888 (128)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4248032 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4248016 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4248048 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4248064 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4248080 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4248384 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4248160 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4248480 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4248256 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4248448 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4248512 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4248096 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4248128 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4248320 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4248224 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4248352 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4248416 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4248288 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4248192 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4182496 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4182560 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4182528 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4182432 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4182592 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4182464 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4248896 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4248640 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4248000 (16)
        Global_Variables.g_DummyVG, ST_VG, 634576832 (1056)
        Global_Variables.g_iSizeOfGGOArray, INT, 634576720 (16)
        Global_Variables.g_stSystem, ST_System, 634576736 (88)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4184672 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4184656 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4184624 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4184640 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4247904 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4246336 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4246368 (32)
        Global_Variables.LISTEN_MODE_CLOSEALL, DWORD, 4391072 (32)
        Global_Variables.LISTEN_MODE_USEOPENED, DWORD, 4391104 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4246240 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4246208 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4246176 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4184608 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4246400 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4246528 (16)
        Global_Variables.MAX_RETRIES, INT, 4389152 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4246552 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4246544 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4246664 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4183168 (32)
        Global_Variables.MAX_THROTTLE_MODE, DWORD, 4391168 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4246656 (8)
        Global_Variables.nWatchdogTime, BYTE, 4182424 (8)
        Global_Variables.PI, LREAL, 4183104 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4246592 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4246624 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4246560 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4246432 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4181984 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4181344 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4181312 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4246464 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4246496 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4181408 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4181728 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4181696 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4247872 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4181568 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4181376 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4181664 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4181600 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4181440 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4181760 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4181632 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4181504 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4181536 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4181472 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4246272 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4246304 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4181792 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4181216 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4181248 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4181280 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4181856 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4181824 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4181888 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4181952 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4181920 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4182408 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4182416 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4255520 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4255872 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4255456 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4255808 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4255232 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4254384 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4254768 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4255392 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4255744 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4255264 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4255616 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4255328 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4255680 (64)
        Global_Variables.TaskInfo, PlcTaskSystemInfo, 634578048 (1024)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4183040 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4183024 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4182928 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4182864 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4182880 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4182896 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4182848 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4182912 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4182992 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4182944 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4182976 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4183008 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4182960 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 1264791904 (6976)
        Global_Variables.TCPADS_IGR_ADAPTER_LINKSTATUS, UDINT, 4390464 (32)
        Global_Variables.TCPADS_IGR_CLOSEBYHDL, UDINT, 4390208 (32)
        Global_Variables.TCPADS_IGR_CONLIST, UDINT, 4390176 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_ADDBYHDL, UDINT, 4390400 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_DROPBYHDL, UDINT, 4390432 (32)
        Global_Variables.TCPADS_IGR_PEERBYHDL, UDINT, 4390272 (32)
        Global_Variables.TCPADS_IGR_RECVBYHDL, UDINT, 4390304 (32)
        Global_Variables.TCPADS_IGR_RECVFROMBYHDL, UDINT, 4390336 (32)
        Global_Variables.TCPADS_IGR_SENDBYHDL, UDINT, 4390240 (32)
        Global_Variables.TCPADS_IGR_SENDTOBYHDL, UDINT, 4390368 (32)
        Global_Variables.TCPADS_NULL_HSOCKET, T_HSOCKET, 4390720 (352)
        Global_Variables.TCPADSCONLST_IOF_ACCEPT, UDINT, 4390592 (32)
        Global_Variables.TCPADSCONLST_IOF_CLOSEALL, UDINT, 4390560 (32)
        Global_Variables.TCPADSCONLST_IOF_CONNECT, UDINT, 4390496 (32)
        Global_Variables.TCPADSCONLST_IOF_GETHNDLBYADDR, UDINT, 4390656 (32)
        Global_Variables.TCPADSCONLST_IOF_GETLINKSTATUS, UDINT, 4390688 (32)
        Global_Variables.TCPADSCONLST_IOF_LISTEN, UDINT, 4390528 (32)
        Global_Variables.TCPADSCONLST_IOF_UDPBIND, UDINT, 4390624 (32)
        Global_Variables.THROTTLE_MODE_DEFAULT, T_ThrottleTimes, 4391616 (416)
        Global_Variables.THROTTLE_MODE_OFF, T_ThrottleTimes, 4391200 (416)
        Global_Variables.TIMEOUT_QVZ, TIME, 4389216 (32)
        Global_Variables.TIMEOUT_WVZ, TIME, 4389248 (32)
        Global_Variables.TIMEOUT_ZVZ, TIME, 4389184 (32)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4182112 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4182016 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4182080 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4182048 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4182144 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4255936 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>15 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_Tc2_DataExchange, ST_LibVersion, 1264799328 (288)
        Global_Version.stLibVersion_Tc2_EtherCAT, ST_LibVersion, 4178880 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4386976 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 1264799040 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 1264791616 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4387264 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 4387552 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 4179168 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4179456 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4184320 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4389696 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4392032 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4183712 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 634576416 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 1264791328 (288)

.. raw:: html

   </details>
   <br />


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 4389632 (32)


GVL_ADS_Devices
^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_ADS_Devices.IM6K2_GCC_01_reader, FB_TGCC_ADS, 1267094912 (93504)
        GVL_ADS_Devices.TM2K2_GCC_01_reader, FB_TGCC_ADS, 1267001408 (93504)


GVL_Chamber_Gauges
^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>27 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Chamber_Gauges.CRYO_GCP_01, FB_972, 1267539776 (86080)
        GVL_Chamber_Gauges.CRYO_GCP_01.i_iPRESS_R, INT, 1267625808 (16)
        GVL_Chamber_Gauges.CRYO_GCP_02, FB_972, 1267626944 (86080)
        GVL_Chamber_Gauges.CRYO_GCP_02.i_iPRESS_R, INT, 1267712976 (16)
        GVL_Chamber_Gauges.CRYO_GPI_01, FB_MKS275, 1267275840 (86336)
        GVL_Chamber_Gauges.CRYO_GPI_01.i_iPRESS_R, INT, 1267361920 (16)
        GVL_Chamber_Gauges.ROUGH_GPI_01, FB_MKS275, 1267363264 (86336)
        GVL_Chamber_Gauges.ROUGH_GPI_01.i_iPRESS_R, INT, 1267449344 (16)
        GVL_Chamber_Gauges.SDS_GCP_01, FB_972, 1267714112 (86080)
        GVL_Chamber_Gauges.SDS_GCP_01.i_iPRESS_R, INT, 1267800144 (16)
        GVL_Chamber_Gauges.stCRYO_GCP_01, ST_VG, 1267625856 (1056)
        GVL_Chamber_Gauges.stCRYO_GCP_02, ST_VG, 1267713024 (1056)
        GVL_Chamber_Gauges.stCRYO_GPI_01, ST_VG, 1267362176 (1056)
        GVL_Chamber_Gauges.stROUGH_GPI_01, ST_VG, 1267449600 (1056)
        GVL_Chamber_Gauges.stSDS_GCP_01, ST_VG, 1267800192 (1056)
        GVL_Chamber_Gauges.stTC_GCC_01, ST_VG, 1267538688 (1056)
        GVL_Chamber_Gauges.stTC_GCP_01, ST_VG, 1267887360 (1056)
        GVL_Chamber_Gauges.stTC_GPI_01, ST_VG, 1267274752 (1056)
        GVL_Chamber_Gauges.TC_GCC_01, FB_MKS500, 1267450688 (88000)
        GVL_Chamber_Gauges.TC_GCC_01.i_iPRESS_R, INT, 1267538288 (16)
        GVL_Chamber_Gauges.TC_GCC_01.i_xDisc_Active, BOOL, 1267538320 (8)
        GVL_Chamber_Gauges.TC_GCC_01.i_xHV_ON, BOOL, 1267538312 (8)
        GVL_Chamber_Gauges.TC_GCC_01.q_xHV_DIS, BOOL, 1267538304 (8)
        GVL_Chamber_Gauges.TC_GCP_01, FB_972, 1267801280 (86080)
        GVL_Chamber_Gauges.TC_GCP_01.i_iPRESS_R, INT, 1267887312 (16)
        GVL_Chamber_Gauges.TC_GPI_01, FB_MKS275, 1267188416 (86336)
        GVL_Chamber_Gauges.TC_GPI_01.i_iPRESS_R, INT, 1267274496 (16)

.. raw:: html

   </details>
   <br />


GVL_Chamber_Valves
^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>61 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Chamber_Valves.CRYO_VGC_01, FB_VRC_DA, 1268678656 (85120)
        GVL_Chamber_Valves.CRYO_VGC_01.i_xClsLS, BOOL, 1268763752 (8)
        GVL_Chamber_Valves.CRYO_VGC_01.i_xOpnLS, BOOL, 1268763744 (8)
        GVL_Chamber_Valves.CRYO_VGC_01.q_xCLS_DO, BOOL, 1268763768 (8)
        GVL_Chamber_Valves.CRYO_VGC_01.q_xOPN_DO, BOOL, 1268763760 (8)
        GVL_Chamber_Valves.CRYO_VGC_02, FB_VRC_DA, 1268763776 (85120)
        GVL_Chamber_Valves.CRYO_VGC_02.i_xClsLS, BOOL, 1268848872 (8)
        GVL_Chamber_Valves.CRYO_VGC_02.i_xOpnLS, BOOL, 1268848864 (8)
        GVL_Chamber_Valves.CRYO_VGC_02.q_xCLS_DO, BOOL, 1268848888 (8)
        GVL_Chamber_Valves.CRYO_VGC_02.q_xOPN_DO, BOOL, 1268848880 (8)
        GVL_Chamber_Valves.CRYO_VRC_01, FB_VRC, 1268848896 (84544)
        GVL_Chamber_Valves.CRYO_VRC_01.i_xClsLS, BOOL, 1268933416 (8)
        GVL_Chamber_Valves.CRYO_VRC_01.i_xOpnLS, BOOL, 1268933408 (8)
        GVL_Chamber_Valves.CRYO_VRC_01.q_xOPN_DO, BOOL, 1268933424 (8)
        GVL_Chamber_Valves.CRYO_VRC_02, FB_VRC, 1268933440 (84544)
        GVL_Chamber_Valves.CRYO_VRC_02.i_xClsLS, BOOL, 1269017960 (8)
        GVL_Chamber_Valves.CRYO_VRC_02.i_xOpnLS, BOOL, 1269017952 (8)
        GVL_Chamber_Valves.CRYO_VRC_02.q_xOPN_DO, BOOL, 1269017968 (8)
        GVL_Chamber_Valves.MAIN_VGC_01, FB_VGC, 1268324736 (176960)
        GVL_Chamber_Valves.MAIN_VGC_01.i_xClsLS, BOOL, 1268501576 (8)
        GVL_Chamber_Valves.MAIN_VGC_01.i_xOpnLS, BOOL, 1268501568 (8)
        GVL_Chamber_Valves.MAIN_VGC_01.q_xOPN_DO, BOOL, 1268501584 (8)
        GVL_Chamber_Valves.MAIN_VGC_02, FB_VGC, 1268501696 (176960)
        GVL_Chamber_Valves.MAIN_VGC_02.i_xClsLS, BOOL, 1268678536 (8)
        GVL_Chamber_Valves.MAIN_VGC_02.i_xOpnLS, BOOL, 1268678528 (8)
        GVL_Chamber_Valves.MAIN_VGC_02.q_xOPN_DO, BOOL, 1268678544 (8)
        GVL_Chamber_Valves.SDS_VGC_01, FB_VRC_DA, 1269017984 (85120)
        GVL_Chamber_Valves.SDS_VGC_01.i_xClsLS, BOOL, 1269103080 (8)
        GVL_Chamber_Valves.SDS_VGC_01.i_xOpnLS, BOOL, 1269103072 (8)
        GVL_Chamber_Valves.SDS_VGC_01.q_xCLS_DO, BOOL, 1269103096 (8)
        GVL_Chamber_Valves.SDS_VGC_01.q_xOPN_DO, BOOL, 1269103088 (8)
        GVL_Chamber_Valves.SDS_VRC_01, FB_VRC, 1269188480 (84544)
        GVL_Chamber_Valves.SDS_VRC_01.i_xClsLS, BOOL, 1269273000 (8)
        GVL_Chamber_Valves.SDS_VRC_01.i_xOpnLS, BOOL, 1269272992 (8)
        GVL_Chamber_Valves.SDS_VRC_01.q_xOPN_DO, BOOL, 1269273008 (8)
        GVL_Chamber_Valves.SDS_VRC_02, FB_VRC, 1269103104 (84544)
        GVL_Chamber_Valves.SDS_VRC_02.i_xClsLS, BOOL, 1269187624 (8)
        GVL_Chamber_Valves.SDS_VRC_02.i_xOpnLS, BOOL, 1269187616 (8)
        GVL_Chamber_Valves.SDS_VRC_02.q_xOPN_DO, BOOL, 1269187632 (8)
        GVL_Chamber_Valves.stSDS_VRC_01, ST_VRC, 1269273024 (816)
        GVL_Chamber_Valves.stSDS_VRC_02, ST_VRC, 1269187648 (816)
        GVL_Chamber_Valves.stTC_VRC_01, ST_VGC_2S, 1268065536 (3040)
        GVL_Chamber_Valves.stTC_VRC_02, ST_VRC, 1268153152 (816)
        GVL_Chamber_Valves.stTC_VRC_03, ST_VRC, 1268238528 (816)
        GVL_Chamber_Valves.stVLS_VRC_01, ST_VRC, 1268323904 (816)
        GVL_Chamber_Valves.TC_VRC_01, FB_VGC_2S, 1267888448 (177088)
        GVL_Chamber_Valves.TC_VRC_01.i_xClsLS, BOOL, 1268065384 (8)
        GVL_Chamber_Valves.TC_VRC_01.i_xOpnLS, BOOL, 1268065376 (8)
        GVL_Chamber_Valves.TC_VRC_01.q_xOPN_DO, BOOL, 1268065392 (8)
        GVL_Chamber_Valves.TC_VRC_02, FB_VRC, 1268068608 (84544)
        GVL_Chamber_Valves.TC_VRC_02.i_xClsLS, BOOL, 1268153128 (8)
        GVL_Chamber_Valves.TC_VRC_02.i_xOpnLS, BOOL, 1268153120 (8)
        GVL_Chamber_Valves.TC_VRC_02.q_xOPN_DO, BOOL, 1268153136 (8)
        GVL_Chamber_Valves.TC_VRC_03, FB_VRC, 1268153984 (84544)
        GVL_Chamber_Valves.TC_VRC_03.i_xClsLS, BOOL, 1268238504 (8)
        GVL_Chamber_Valves.TC_VRC_03.i_xOpnLS, BOOL, 1268238496 (8)
        GVL_Chamber_Valves.TC_VRC_03.q_xOPN_DO, BOOL, 1268238512 (8)
        GVL_Chamber_Valves.VLS_VRC_01, FB_VRC, 1268239360 (84544)
        GVL_Chamber_Valves.VLS_VRC_01.i_xClsLS, BOOL, 1268323880 (8)
        GVL_Chamber_Valves.VLS_VRC_01.i_xOpnLS, BOOL, 1268323872 (8)
        GVL_Chamber_Valves.VLS_VRC_01.q_xOPN_DO, BOOL, 1268323888 (8)

.. raw:: html

   </details>
   <br />


GVL_COM
^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_COM.K2S17_E5_CH1_fbSerialLineControl, SerialLineControl, 1269294720 (10432)
        GVL_COM.K2S17_E5_CH1_SerialRXBuffer, ComBuffer, 1269289696 (2512)
        GVL_COM.K2S17_E5_CH1_SerialTXBuffer, ComBuffer, 1269292208 (2512)
        GVL_COM.K2S17_E5_CH1_stComIn, EL6inData22B, 1269305152 (192)
        GVL_COM.K2S17_E5_CH1_stComOut, EL6outData22B, 1269305344 (192)
        GVL_COM.K2S17_E5_CH2_fbSerialLineControl, SerialLineControl, 1269278880 (10432)
        GVL_COM.K2S17_E5_CH2_SerialRXBuffer, ComBuffer, 1269273840 (2512)
        GVL_COM.K2S17_E5_CH2_SerialTXBuffer, ComBuffer, 1269276352 (2512)
        GVL_COM.K2S17_E5_CH2_stComIn, EL6inData22B, 1269289312 (192)
        GVL_COM.K2S17_E5_CH2_stComOut, EL6outData22B, 1269289504 (192)


GVL_COM_VLS
^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_COM_VLS.VLS_EP1_CH1_fbSerialLineControl, SerialLineControl, 1269310560 (10432)
        GVL_COM_VLS.VLS_EP1_CH1_SerialRXBuffer, ComBuffer, 1269305536 (2512)
        GVL_COM_VLS.VLS_EP1_CH1_SerialTXBuffer, ComBuffer, 1269308048 (2512)
        GVL_COM_VLS.VLS_EP1_CH1_stComIn, EL6inData22B, 1269320992 (192)
        GVL_COM_VLS.VLS_EP1_CH1_stComOut, EL6outData22B, 1269321184 (192)


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4389984 (128)


GVL_LI3K2
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_LI3K2.RIX_LI3K2_PTM_01, FB_PTM_TwisTorr, 1269321408 (82688)
        GVL_LI3K2.RIX_LI3K2_PTM_01.i_xAtSpd, BOOL, 1269404072 (8)
        GVL_LI3K2.RIX_LI3K2_PTM_01.i_xFault, BOOL, 1269404080 (8)
        GVL_LI3K2.RIX_LI3K2_PTM_01.q_RunDO, BOOL, 1269404088 (8)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096088 (8)
        GVL_Logger.cLogHost, STRING(15), 4096192 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097216 (81600)
        GVL_Logger.iLogPort, UINT, 4096096 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4178816 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096416 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096112 (16)
        GVL_Logger.nTrickleThreshold, UDINT, 4178848 (32)
        GVL_Logger.nTrickleTripTime, TIME, 4096448 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096480 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096320 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096512 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097184 (32)

.. raw:: html

   </details>
   <br />


GVL_Mech_Room
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Mech_Room.MECH_GPI_01, FB_MKS275, 1269489024 (86336)
        GVL_Mech_Room.MECH_GPI_01.i_iPRESS_R, INT, 1269575104 (16)
        GVL_Mech_Room.MECH_PRO_01, FB_EbaraDryPump, 1269404096 (83840)
        GVL_Mech_Room.MECH_PRO_01.i_xAlarmOK, BOOL, 1269487912 (8)
        GVL_Mech_Room.MECH_PRO_01.i_xBPStatus, BOOL, 1269487896 (8)
        GVL_Mech_Room.MECH_PRO_01.i_xMPStatus, BOOL, 1269487888 (8)
        GVL_Mech_Room.MECH_PRO_01.i_xRemote, BOOL, 1269487920 (8)
        GVL_Mech_Room.MECH_PRO_01.i_xWarning, BOOL, 1269487904 (8)
        GVL_Mech_Room.MECH_PRO_01.q_xBPStart, BOOL, 1269487880 (8)
        GVL_Mech_Room.MECH_PRO_01.q_xMPStart, BOOL, 1269487872 (8)
        GVL_Mech_Room.MECH_VVC_01, FB_VVC, 1269488384 (640)
        GVL_Mech_Room.MECH_VVC_01.q_xOPN_DO, BOOL, 1269488992 (8)
        GVL_Mech_Room.stMECH_PRO_01, ST_EbaraDryPump, 1269487936 (448)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>17 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 4392368 (16)
        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 634593088 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 4392352 (8)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 626221432 (8)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 4392336 (16)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 634590992 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4392320 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 634590976 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4390160 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 634590640 (16)
        GVL_Param_TcUnit.TimeBetweenTestSuitesExecution, TIME, 634593120 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 4392384 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 634591008 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 4392360 (8)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 634576824 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 4392416 (2048)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 634591040 (2048)

.. raw:: html

   </details>
   <br />


GVL_PfeifferParameters
^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PfeifferParameters.gcMaxPfeifferPumps, INT, 634578016 (16)


GVL_PLC_Interfaces
^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>15 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PLC_Interfaces.bCRYO_VGC_01_CLS, BOOL, 1267275824 (8)
        GVL_PLC_Interfaces.bCRYO_VGC_01_OPN, BOOL, 1267275832 (8)
        GVL_PLC_Interfaces.bCRYO_VGC_02_CLS, BOOL, 1267363232 (8)
        GVL_PLC_Interfaces.bCRYO_VGC_02_OPN, BOOL, 1267363240 (8)
        GVL_PLC_Interfaces.bSDS_VGC_01_CLS, BOOL, 1267363248 (8)
        GVL_PLC_Interfaces.bSDS_VGC_01_OPN, BOOL, 1267363256 (8)
        GVL_PLC_Interfaces.xEcatBridge_External_device_not_connected, BOOL, 1266031472 (8)
        GVL_PLC_Interfaces.xEcatBridge_TxPDO_state, BOOL, 1266031464 (8)
        GVL_PLC_Interfaces.xEcatBridge_WcState, BOOL, 1266031480 (8)
        GVL_PLC_Interfaces.xPTC_MOT_Y_10_IN, BOOL, 1267001376 (8)
        GVL_PLC_Interfaces.xPTC_MOT_Y_10_OUT, BOOL, 1267001384 (8)
        GVL_PLC_Interfaces.xPTC_MOT_Y_11_IN, BOOL, 1267001392 (8)
        GVL_PLC_Interfaces.xPTC_MOT_Y_11_OUT, BOOL, 1267001400 (8)
        GVL_PLC_Interfaces.xSDS_MOT_Z_18_IN, BOOL, 1267275808 (8)
        GVL_PLC_Interfaces.xSDS_MOT_Z_18_OUT, BOOL, 1267275816 (8)

.. raw:: html

   </details>
   <br />


GVL_PMPS
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PMPS.fbArbiter1, FB_Arbiter, 1270565184 (473472)
        GVL_PMPS.g_FastFaultOutput1, FB_HardwareFFOutput, 1269575360 (494912)
        GVL_PMPS.g_FastFaultOutput1.q_xFastFaultOut, BOOL, 1269575624 (8)
        GVL_PMPS.g_FastFaultOutput2, FB_HardwareFFOutput, 1270070272 (494912)
        GVL_PMPS.g_FastFaultOutput2.q_xFastFaultOut, BOOL, 1270070536 (8)


GVL_Pumps
^^^^^^^^^

.. raw:: html

   <details>
       <summary>36 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Pumps.fb_SDS_PTM_01_Pfeiffer_PfeifferCom, FB_PFEIFFER_COM, 1272223936 (797696)
        GVL_Pumps.fbTC_PTM_03_PfeifferCom, FB_PFEIFFER_COM, 1271316032 (797696)
        GVL_Pumps.SDS_PTM_01, FB_PTM_Pfeiffer, 1272113728 (83264)
        GVL_Pumps.SDS_PTM_01.i_xAtSpd, BOOL, 1272196928 (8)
        GVL_Pumps.SDS_PTM_01.i_xFaultNC, BOOL, 1272196936 (8)
        GVL_Pumps.SDS_PTM_01.i_xRemote, BOOL, 1272196952 (8)
        GVL_Pumps.SDS_PTM_01.i_xWarn, BOOL, 1272196944 (8)
        GVL_Pumps.SDS_PTM_01.q_PumpingStation, BOOL, 1272196968 (8)
        GVL_Pumps.SDS_PTM_01.q_RunDO, BOOL, 1272196960 (8)
        GVL_Pumps.SDS_PTM_01.q_xRemote, BOOL, 1272196976 (8)
        GVL_Pumps.SDS_PTM_01.q_xReset, BOOL, 1272196984 (8)
        GVL_Pumps.stSDS_PTM_01, ST_PfeifferPTM, 1272196992 (704)
        GVL_Pumps.stSDS_PTM_01_Pfeiffer_CTRL, ST_PfeifferControl, 1272197696 (3200)
        GVL_Pumps.stSDS_PTM_01_Pfeiffer_RBK, ST_PfeifferStatus, 1272200896 (23040)
        GVL_Pumps.stTC_PTM_01, ST_LeyboldPTM, 1271205312 (512)
        GVL_Pumps.stTC_PTM_02, ST_LeyboldPTM, 1271121728 (512)
        GVL_Pumps.stTC_PTM_03, ST_PfeifferPTM, 1271289088 (704)
        GVL_Pumps.stTC_PTM_03_Pfeiffer_CTRL, ST_PfeifferControl, 1271289792 (3200)
        GVL_Pumps.stTC_PTM_03_Pfeiffer_RBK, ST_PfeifferStatus, 1271292992 (23040)
        GVL_Pumps.TC_PTM_01, FB_PTM_TurboDrive, 1271122240 (83072)
        GVL_Pumps.TC_PTM_01.i_xAtSpd, BOOL, 1271205280 (8)
        GVL_Pumps.TC_PTM_01.i_xFaultNC, BOOL, 1271205288 (8)
        GVL_Pumps.TC_PTM_01.q_RunDO, BOOL, 1271205296 (8)
        GVL_Pumps.TC_PTM_02, FB_PTM_TurboDrive, 1271038656 (83072)
        GVL_Pumps.TC_PTM_02.i_xAtSpd, BOOL, 1271121696 (8)
        GVL_Pumps.TC_PTM_02.i_xFaultNC, BOOL, 1271121704 (8)
        GVL_Pumps.TC_PTM_02.q_RunDO, BOOL, 1271121712 (8)
        GVL_Pumps.TC_PTM_03, FB_PTM_Pfeiffer, 1271205824 (83264)
        GVL_Pumps.TC_PTM_03.i_xAtSpd, BOOL, 1271289024 (8)
        GVL_Pumps.TC_PTM_03.i_xFaultNC, BOOL, 1271289032 (8)
        GVL_Pumps.TC_PTM_03.i_xRemote, BOOL, 1271289048 (8)
        GVL_Pumps.TC_PTM_03.i_xWarn, BOOL, 1271289040 (8)
        GVL_Pumps.TC_PTM_03.q_PumpingStation, BOOL, 1271289064 (8)
        GVL_Pumps.TC_PTM_03.q_RunDO, BOOL, 1271289056 (8)
        GVL_Pumps.TC_PTM_03.q_xRemote, BOOL, 1271289072 (8)
        GVL_Pumps.TC_PTM_03.q_xReset, BOOL, 1271289080 (8)

.. raw:: html

   </details>
   <br />


GVL_Recirculation
^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>30 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Recirculation.RCC_GCP_01, FB_901_ECAT, 1280666880 (86080)
        GVL_Recirculation.RCC_GCP_01.bWcstate, BOOL, 1280752928 (8)
        GVL_Recirculation.RCC_GCP_01.i_iPRESS_R, REAL, 1280752896 (32)
        GVL_Recirculation.RCC_GCP_01.xOverrange, BOOL, 1280752880 (8)
        GVL_Recirculation.RCC_GCP_01.xPress_OK, BOOL, 1280752872 (8)
        GVL_Recirculation.RCC_GCP_01.xUnderrange, BOOL, 1280752888 (8)
        GVL_Recirculation.RCC_STC_01, FB_TempSensor, 1280752960 (256)
        GVL_Recirculation.RCC_STC_01.bError, BOOL, 1280753160 (8)
        GVL_Recirculation.RCC_STC_01.bOverrange, BOOL, 1280753176 (8)
        GVL_Recirculation.RCC_STC_01.bUnderrange, BOOL, 1280753168 (8)
        GVL_Recirculation.RCC_STC_01.iRaw, INT, 1280753184 (16)
        GVL_Recirculation.RCC_STC_02, FB_TempSensor, 1287333760 (256)
        GVL_Recirculation.RCC_STC_02.bError, BOOL, 1287333960 (8)
        GVL_Recirculation.RCC_STC_02.bOverrange, BOOL, 1287333976 (8)
        GVL_Recirculation.RCC_STC_02.bUnderrange, BOOL, 1287333968 (8)
        GVL_Recirculation.RCC_STC_02.iRaw, INT, 1287333984 (16)
        GVL_Recirculation.RCC_VRC_01, FB_VRC_NC_ClsLS, 1280328704 (84544)
        GVL_Recirculation.RCC_VRC_01.i_xClsLS, BOOL, 1280413216 (8)
        GVL_Recirculation.RCC_VRC_01.q_xOPN_DO, BOOL, 1280413224 (8)
        GVL_Recirculation.RCC_VRC_02, FB_VRC, 1280413248 (84544)
        GVL_Recirculation.RCC_VRC_02.i_xClsLS, BOOL, 1280497768 (8)
        GVL_Recirculation.RCC_VRC_02.i_xOpnLS, BOOL, 1280497760 (8)
        GVL_Recirculation.RCC_VRC_02.q_xOPN_DO, BOOL, 1280497776 (8)
        GVL_Recirculation.RCC_VRC_03, FB_VRC_NC_ClsLS, 1280497792 (84544)
        GVL_Recirculation.RCC_VRC_03.i_xClsLS, BOOL, 1280582304 (8)
        GVL_Recirculation.RCC_VRC_03.q_xOPN_DO, BOOL, 1280582312 (8)
        GVL_Recirculation.RCC_VRC_04, FB_VRC_NC_ClsLS, 1280582336 (84544)
        GVL_Recirculation.RCC_VRC_04.i_xClsLS, BOOL, 1280666848 (8)
        GVL_Recirculation.RCC_VRC_04.q_xOPN_DO, BOOL, 1280666856 (8)
        GVL_Recirculation.xSystemOverrideMode_RCC, BOOL, 1267626912 (8)

.. raw:: html

   </details>
   <br />


GVL_TcUnit
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>19 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 626255552 (8320864)
        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 1256470464 (8320864)
        GVL_TcUnit.CurrentlyRunningOrderedTestInTestSuite, UINT, 1256454464 (16000)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 626221416 (8)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 634593112 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 626221472 (2048)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 1256420384 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 626221440 (32)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 1256420352 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 626221424 (8)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 1256422432 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 626223520 (16)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 1256422448 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4394464 (621826944)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 634593152 (621827200)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 626223552 (32000)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 1256422464 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 626221408 (8)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 634593104 (8)

.. raw:: html

   </details>
   <br />


GVL_Vars
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Vars.fbLogHandler, FB_LogHandler, 1273021632 (5788800)
        GVL_Vars.iMechDRL_CurrMon, INT, 1267450672 (16)
        GVL_Vars.iMechDrl_VMon, INT, 1267539744 (16)
        GVL_Vars.xSystemOverride_ChemRIXS, BOOL, 1267450656 (8)


GVL_VLS
^^^^^^^

.. raw:: html

   <details>
       <summary>33 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_VLS.fb_VLS_PfeifferCom, FB_PFEIFFER_COM, 1278920640 (797696)
        GVL_VLS.SetupMode_VLS, BOOL, 1267539760 (8)
        GVL_VLS.st_VLS_Pfeiffer_CTRL, ST_PfeifferControl, 1278894400 (3200)
        GVL_VLS.st_VLS_Pfeiffer_RBK, ST_PfeifferStatus, 1278897600 (23040)
        GVL_VLS.stVLS_PTM_01, ST_PfeifferPTM, 1278893696 (704)
        GVL_VLS.VLS_GCC_01, FB_MKS500, 1280153984 (88000)
        GVL_VLS.VLS_GCC_01.i_iPRESS_R, INT, 1280241584 (16)
        GVL_VLS.VLS_GCC_01.i_xDisc_Active, BOOL, 1280241616 (8)
        GVL_VLS.VLS_GCC_01.i_xHV_ON, BOOL, 1280241608 (8)
        GVL_VLS.VLS_GCC_01.q_xHV_DIS, BOOL, 1280241600 (8)
        GVL_VLS.VLS_GPI_01, FB_MKS275, 1280067648 (86336)
        GVL_VLS.VLS_GPI_01.i_iPRESS_R, INT, 1280153728 (16)
        GVL_VLS.VLS_PTM_01, FB_PTM_Pfeiffer, 1278810432 (83264)
        GVL_VLS.VLS_PTM_01.i_xAtSpd, BOOL, 1278893632 (8)
        GVL_VLS.VLS_PTM_01.i_xFaultNC, BOOL, 1278893640 (8)
        GVL_VLS.VLS_PTM_01.i_xRemote, BOOL, 1278893656 (8)
        GVL_VLS.VLS_PTM_01.i_xWarn, BOOL, 1278893648 (8)
        GVL_VLS.VLS_PTM_01.q_PumpingStation, BOOL, 1278893672 (8)
        GVL_VLS.VLS_PTM_01.q_RunDO, BOOL, 1278893664 (8)
        GVL_VLS.VLS_PTM_01.q_xRemote, BOOL, 1278893680 (8)
        GVL_VLS.VLS_PTM_01.q_xReset, BOOL, 1278893688 (8)
        GVL_VLS.VLS_PTM_01_xExtIlkOK, BOOL, 1267539768 (8)
        GVL_VLS.VLS_ROUGH_GPI, FB_9XX, 1280241984 (86720)
        GVL_VLS.VLS_ROUGH_GPI.i_iPRESS_R, INT, 1280328624 (16)
        GVL_VLS.VLS_VGC_01, FB_VGC, 1279718336 (176960)
        GVL_VLS.VLS_VGC_01.i_xClsLS, BOOL, 1279895176 (8)
        GVL_VLS.VLS_VGC_01.i_xOpnLS, BOOL, 1279895168 (8)
        GVL_VLS.VLS_VGC_01.q_xOPN_DO, BOOL, 1279895184 (8)
        GVL_VLS.VLS_VWC_01, FB_VRC_NO_FFO, 1279895296 (172352)
        GVL_VLS.VLS_VWC_01.i_xClsLS, BOOL, 1279979816 (8)
        GVL_VLS.VLS_VWC_01.i_xOpnLS, BOOL, 1279979808 (8)
        GVL_VLS.VLS_VWC_01.q_xCLS_DO, BOOL, 1279979824 (8)
        GVL_VLS.xSystemOverrideMode_VLS, BOOL, 1267450664 (8)

.. raw:: html

   </details>
   <br />


LCLS_General
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_General.DefaultGlobals.stSys.I_EcatMaster1, AMSNETID, 4096040 (48)


LCLS_Vacuum
^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_Vacuum.Global_Variables.g_stSystem.I_EcatMaster1, AMSNETID, 634576776 (48)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4389664 (32)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>24 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 634578032 (16)
        PMPS_GVL.BP_jsonDoc, SJsonValue, 3072064 (32)
        PMPS_GVL.cnMaxStateArrayLen, INT, 634583888 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 634585728 (1760)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 634583968 (1760)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 634587520 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 634583648 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 634583744 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 634582592 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 634589600 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 634588576 (1024)
        PMPS_GVL.g_cBoundaries, INT, 634587504 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 634587488 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 634583808 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 634583872 (16)
        PMPS_GVL.PERange, PE_Ranges, 634583616 (32)
        PMPS_GVL.reVHyst, REAL, 634588544 (32)
        PMPS_GVL.stAttenuators, ST_PMPS_Attenuator, 634583904 (64)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 634580832 (1760)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 634579072 (1760)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 634583840 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 634583680 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 634590656 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 634590624 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 634590688 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 634590720 (256)


PRG_ADS_Interfaces
^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_ADS_Interfaces.ads_watch_dog, FB_ADS_WATCHDOG, 1264856768 (7008)
        PRG_ADS_Interfaces.i_iWatchdog, UDINT, 1264856736 (32)


PRG_Chamber_Pumps
^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_Chamber_Pumps.fbSDS_PTM_01_ILK, FB_ChemRIXS_Turbo_ILK, 1265838080 (1504)
        PRG_Chamber_Pumps.fbTC_PTM_01_ILK, FB_ChemRIXS_Turbo_ILK, 1265833568 (1504)
        PRG_Chamber_Pumps.fbTC_PTM_02_ILK, FB_ChemRIXS_Turbo_ILK, 1265835072 (1504)
        PRG_Chamber_Pumps.fbTC_PTM_03_ILK, FB_ChemRIXS_Turbo_ILK, 1265836576 (1504)
        PRG_Chamber_Pumps.SDS_PTM_01_ILK_OK, BOOL, 1264864992 (8)
        PRG_Chamber_Pumps.TC_PTM_01_ILK_OK, BOOL, 1264863912 (8)
        PRG_Chamber_Pumps.TC_PTM_02_ILK_OK, BOOL, 1264863920 (8)
        PRG_Chamber_Pumps.TC_PTM_03_ILK_OK, BOOL, 1264863928 (8)


PRG_Chamber_Valves
^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>22 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_Chamber_Valves.bChamberAtVac, BOOL, 1264863904 (8)
        PRG_Chamber_Valves.bCRYO_VGC_01_CLS_OK, BOOL, 1264863856 (8)
        PRG_Chamber_Valves.bCRYO_VGC_01_OPN_OK, BOOL, 1264863864 (8)
        PRG_Chamber_Valves.bCRYO_VGC_02_CLS_OK, BOOL, 1264863872 (8)
        PRG_Chamber_Valves.bCRYO_VGC_02_OPN_OK, BOOL, 1264863880 (8)
        PRG_Chamber_Valves.bCRYO_VRC_01_ILK, BOOL, 1264863888 (8)
        PRG_Chamber_Valves.bCRYO_VRC_01_OPN_OK, BOOL, 1264863840 (8)
        PRG_Chamber_Valves.bCRYO_VRC_02_ILK, BOOL, 1264863896 (8)
        PRG_Chamber_Valves.bCRYO_VRC_02_OPN_OK, BOOL, 1264863848 (8)
        PRG_Chamber_Valves.bm_dummy_gauge, ST_VG, 1264863936 (1056)
        PRG_Chamber_Valves.bRoughPressOK, BOOL, 1256422440 (8)
        PRG_Chamber_Valves.bSDS_VGC_01_CLS_OK, BOOL, 1264863808 (8)
        PRG_Chamber_Valves.bSDS_VGC_01_OPN_OK, BOOL, 1264863816 (8)
        PRG_Chamber_Valves.bSDS_VRC_01_ILK, BOOL, 1264863832 (8)
        PRG_Chamber_Valves.bSDS_VRC_02_ILK, BOOL, 1264863824 (8)
        PRG_Chamber_Valves.bTC_VRC_01_ILK, BOOL, 1264863776 (8)
        PRG_Chamber_Valves.bTC_VRC_02_ILK, BOOL, 1264863784 (8)
        PRG_Chamber_Valves.bTC_VRC_03_ILK, BOOL, 1264863792 (8)
        PRG_Chamber_Valves.bVLS_VRC_01_ILK, BOOL, 1264863800 (8)
        PRG_Chamber_Valves.dummy_fbArbiter1, FB_Arbiter, 1265359936 (473472)
        PRG_Chamber_Valves.dummy_FFFO, FB_HardwareFFOutput, 1264865024 (494912)
        PRG_Chamber_Valves.dummy_FFFO.q_xFastFaultOut, BOOL, 1264865288 (8)

.. raw:: html

   </details>
   <br />


PRG_MPS
^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_MPS.fb_vetoArbiter, FB_VetoArbiter, 1265978624 (27168)
        PRG_MPS.fbArbiterIO, FB_SubSysToArbiter_IO, 1265840256 (138368)
        PRG_MPS.fbArbiterIO.i_stCurrentBP, ST_BeamParams_IO, 1265841056 (1760)
        PRG_MPS.fbArbiterIO.q_stRequestedBP, ST_BeamParams_IO, 1265842816 (1760)
        PRG_MPS.fbArbiterIO.xTxPDO_state, BIT, 1265844577 (1)
        PRG_MPS.fbArbiterIO.xTxPDO_toggle, BIT, 1265844576 (1)
        PRG_MPS.ff2_ff1_link_vac, FB_FastFault, 1266005792 (25088)


PRG_RCC
^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_RCC.RCC_VRC_01_OPEN_OK, BOOL, 1264865008 (8)
        PRG_RCC.RCC_VRC_02_OPEN_OK, BOOL, 1264865016 (8)
        PRG_RCC.RCC_VRC_03_OPEN_OK, BOOL, 1265839584 (8)
        PRG_RCC.RCC_VRC_04_OPEN_OK, BOOL, 1265839592 (8)


PRG_VLS_Turbo
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_VLS_Turbo.fbVLS_PTM_01_ILK, FB_ChemRIXS_Turbo_ILK, 1266999872 (1504)
        PRG_VLS_Turbo.VLS_PTM_01_xExtIlkOK, BOOL, 1266031456 (8)


PRG_VLS_VACUUM
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_VLS_VACUUM.bVLS_Ext_Press, BOOL, 1264865000 (8)


PRG_VLS_WINDOW
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_VLS_WINDOW.bExtPress, BOOL, 1265839608 (8)
        PRG_VLS_WINDOW.bOverride, BOOL, 1265840240 (8)
        PRG_VLS_WINDOW.bSetup, BOOL, 1265840248 (8)
        PRG_VLS_WINDOW.fbFSInit, R_TRIG, 1266031392 (64)
        PRG_VLS_WINDOW.g_FastFaultOutputNA, FB_HardwareFFOutput, 1266031488 (494912)
        PRG_VLS_WINDOW.g_FastFaultOutputNA.q_xFastFaultOut, BOOL, 1266031752 (8)
        PRG_VLS_WINDOW.g_fbArbiterNA, FB_Arbiter, 1266526400 (473472)
        PRG_VLS_WINDOW.state, E_STATES, 1265840224 (16)
        PRG_VLS_WINDOW.xFirstPass, BOOL, 1265839600 (8)


TC_EVENT_CLASSES
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENT_CLASSES.LCLSGeneralEventClass, GUID, 1280812256 (128)
        TC_EVENT_CLASSES.TcGeneralAdsEventClass, GUID, 1280811744 (128)
        TC_EVENT_CLASSES.TcRouterEventClass, GUID, 1280811872 (128)
        TC_EVENT_CLASSES.TcRTimeEventClass, GUID, 1280812000 (128)
        TC_EVENT_CLASSES.TcSystemEventClass, GUID, 1280811616 (128)
        TC_EVENT_CLASSES.Win32EventClass, GUID, 1280812128 (128)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 1280802592 (960)


TwinCAT_LicenseInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_LicenseInfoVarList._LicenseInfo, PlcLicenseInfo, 1280753344 (1024)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__ComTask, _Implicit_Task_Info, 1280758560 (704)
        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 1280759264 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 1280754368 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 1280756416 (2048)
        TwinCAT_SystemInfoVarList._TaskOid_ComTask, OTCID, 1280758464 (32)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 1280758528 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_ComTask, OTCID, 1269321376 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 1280758496 (32)


